# Origin

./: .gitignore  Counterpart.seed  DETERMINISTIC_INTELLIGENCE.md  PROMPT_LFME_INTEGRATION.md  REPOSITORY_ANALYSIS_REPORT.md  denotum.seed.yaml  repl.py
origin/: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY_NTH_LEVEL_REFINEMENT_REPORT.md  ROOT_FINDINGS.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
origin/.github/workflows/: ci.yml
origin/config/: crystal_roots.json  crystal_v3.0.6.json  qed_v1.0_seed.yaml  roi_v5.3.1_seed.yaml
origin/docs/: 00_dedication.md  01_origin_overview.md  02_corpus_map.md  03_holodeck_spec.md  04_mcl_spec.md  05_o2c.md  06_qed.md  07_kati.md  08_medusa_interface.md  09_privacy_boundary.md  10_language_kits.md  11_release_and_export.md  12_roadmap.md  13_rationalized_unknowns.md  14_denotum_fractal_tree.md  15_roundtree_architecture.md  16_bubble_ledger.md  17_deterministic_build_spec.md  18_conformance_suite_guide.md  THINKING_WITHOUT_MODELS.md
origin/docs/formats/: rxm.md  rxm_plan.md
origin/docs/oi_far/: adding_knowledge.md  architecture.md  determinism.md  running_evals.md
origin/docs/specs/: PWDC_DICTIONARY_FORMAT.md  PWK_RULESET_v1.md  PWOF_v1.md  PWV1_WOVEN_FORMAT.md  RWV1_CONTAINER.md  RWV_VIDEO_V1.md
origin/eval/prompts/: contradictions.yaml  contradictions_extended.yaml  formatting.yaml  formatting_extended.yaml  knowledge.yaml  knowledge_extended.yaml  planning.yaml  planning_extended.yaml  reasoning.yaml  reasoning_extended.yaml
origin/kits/bash/: README.md  main.sh
origin/kits/cpp/: README.md  main.cpp
origin/kits/csharp/: Program.cs  README.md
origin/kits/go/: README.md  main.go
origin/kits/java/: Main.java  README.md
origin/kits/julia/: README.md  main.jl
origin/kits/kotlin/: Main.kt  README.md
origin/kits/php/: README.md  main.php
origin/kits/python/: README.md  main.py
origin/kits/r/: README.md  main.R
origin/kits/ruby/: README.md  main.rb
origin/kits/rust/: Cargo.toml  README.md  main.rs
origin/kits/sql/: README.md  main.sql
origin/kits/swift/: README.md  main.swift
origin/kits/typescript/: README.md  main.ts
origin/knowledge/: injected_hard_questions.txt
origin/manifests/realityweaver/: RW_SHADOW_MANIFEST.json
origin/modules/: LICENSE_WCL-1.0.txt  TODO.md  __init__.py  weaver.py
origin/modules/phraseweave/: README.md  SPEC.md  setup.py
origin/modules/proofweave/: README.md  SPEC.md  setup.py
origin/modules/realityweaver/: README.md  SPEC.md  setup.py
origin/modules/realityweaver_music/: README.md  SPEC.md  setup.py
origin/modules/realityweaver_video/: README.md  SPEC.md  setup.py
origin/oi_far/: __init__.py  cli.py  eval.py  proxy.py
origin/oi_far/growth/: __init__.py  loop.py  missing.py
origin/oi_far/kernel/: __init__.py  commitments.py  session.py  types.py
origin/oi_far/reasoning/: __init__.py  critic.py  planner.py  solver.py  types.py
origin/oi_far/renderer/: __init__.py  claim_checker.py  renderer.py  templates.py  types.py
origin/oi_far/retrieval/: __init__.py  retriever.py  scoring.py  types.py
origin/oi_far/substrate/: __init__.py  brick_compiler.py  brick_store.py  document_store.py  types.py
origin/oi_far/tools/: __init__.py  files.py  registry.py  sandbox.py  tests.py  vault.py
origin/receipts/realityweaver/: PH1_full.ptr  PH1_min.json  PH2_full.ptr  PH2_min.json
origin/rules/: core.yaml
origin/samples/rxm/: score_only_example.rxm  score_plus_audio_example.rxm
origin/schema/: crystal_roots.schema.json  graph.schema.json  pack.schema.json  rule.schema.json
origin/site/: next.config.js  package.json
origin/specs/realityweaver/: conflict_ledger_schema_v0.json  lineage_map_schema_v0.json  manifest_schema_v0.json  (+4 more)
origin/tools/: archive.ts  build-graph.ts  build-index.ts  build-search.ts  build-timeline.ts  determinism-check.ts  explain.ts  export-public.ts  query.ts  run-tests.ts  validate.ts
origin/utils/origin_orgasystem_utils/: Cargo.toml  Makefile
origin/utils/origin_orgasystem_utils/crates/compress/: Cargo.toml
origin/utils/origin_orgasystem_utils/crates/compress/src/: compress.rs  decompress.rs  frame.rs  lib.rs
origin/utils/origin_orgasystem_utils/crates/dpack_core/: Cargo.toml
origin/utils/origin_orgasystem_utils/crates/dpack_core/src/: lib.rs  manifest.rs  pack.rs  policy.rs  receipt.rs
origin/utils/origin_orgasystem_utils/crates/lfme_core/: Cargo.toml
origin/utils/origin_orgasystem_utils/crates/lfme_core/src/: canonical.rs  denotum.rs  lib.rs  parser.rs  validator.rs
origin/utils/origin_orgasystem_utils/crates/originctl/: Cargo.toml
origin/utils/origin_orgasystem_utils/crates/originctl/src/: commands.rs  main.rs
origin/utils/origin_orgasystem_utils/crates/originctl/tests/: golden_tests.rs  proptest_roundtrip.rs
origin/utils/origin_orgasystem_utils/crates/rag_deterministic/: Cargo.toml
origin/utils/origin_orgasystem_utils/crates/rag_deterministic/src/: chunk.rs  embed.rs  index.rs  lib.rs  retrieve.rs
origin/utils/origin_orgasystem_utils/crates/replication_core/: Cargo.toml
origin/utils/origin_orgasystem_utils/crates/replication_core/src/: gate.rs  lib.rs  replicate.rs
origin/utils/origin_orgasystem_utils/crates/seed_core/: Cargo.toml
origin/utils/origin_orgasystem_utils/crates/seed_core/src/: lib.rs
origin/utils/origin_orgasystem_utils/docs/: architecture.md  format_cpack.md  format_dpack.md  usage.md
origin/utils/origin_orgasystem_utils/fixtures/sample_tree/: README.md  config.yaml
origin/utils/origin_orgasystem_utils/fixtures/sample_tree/spec/seed/: denotum.seed.2i.yaml
origin/utils/origin_orgasystem_utils/fixtures/sample_tree/src/: main.rs
origin/utils/origin_orgasystem_utils/scripts/: install.sh
origin/utils/origin_orgasystem_utils/spec/: morphogenesis.diamond.yaml
origin/utils/origin_orgasystem_utils/spec/dpack/: dpack.spec.yaml
origin/utils/origin_orgasystem_utils/spec/replication/: replication.spec.yaml
origin/utils/origin_orgasystem_utils/spec/seed/: denotum.seed.2i.yaml
(+131 files in other folders)
