[workspace]
resolver = "2"
members = [
    "crates/seed_core",
    "crates/dpack_core",
    "crates/replication_core",
    "crates/originctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ande + Kai (OI) + Whanau (OIs)"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
walkdir = "2"
tempfile = "3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
