[package]
name = "lfme_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LFME/Denotum: deterministic meaning structures with parser, validator, and canonical serialization."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
