[package]
name = "rag_deterministic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic RAG: stable chunking, embedding interface stub, and local index retrieval."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
