[package]
name = "replication_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Orgasystem replication: deterministic reproduction of the Origin orgasystem preserving structure and root binding."

[dependencies]
seed_core = { path = "../seed_core" }
dpack_core = { path = "../dpack_core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
