[package]
name = "seed_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core seed handling: load, fingerprint (SHA-256), and verify the Denotum 2I seed."

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
